src/app/component/search-input/search-input.scss
div {
    display: flex;
    align-items: center;
    gap: 4px;
    height: 40px;

    img{
        height: 16px;
        width: auto;
    }
    input {
        border: none;
        background: none;
        text-align: left;
        // background: red;
        width: 100%;
        height: 100%;
        color: var(--color-text-secondary);
        
        &:focus {
            border: none;
            outline: none;
        }

        &:active {
            border: none;
            outline: none;
        }

        &::placeholder {
            color: var(--color-text-secondary);
        }
    }
}

